--- a/OneExam/ResultTableViewCell.xib
+++ b/OneExam/ResultTableViewCell.xib
@@ -26,20 +26,25 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="北京駅までいくらかかりますか？" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zU8-1b-YEc">
-                        <rect key="frame" x="38" y="65.5" width="334.5" height="23"/>
+                        <rect key="frame" x="38" y="65.5" width="450" height="23"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="450" id="xT2-bc-xpo"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="22"/>
-                        <nil key="textColor"/>
+                        <color key="textColor" red="1" green="0.24354234068082725" blue="0.11399086898900945" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xpU-ZN-paK">
-                        <rect key="frame" x="522.5" y="21" width="50" height="60"/>
+                        <rect key="frame" x="518" y="21" width="50" height="60"/>
                         <constraints>
+                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="8Jr-iK-q6S"/>
                             <constraint firstAttribute="height" constant="60" id="GFa-ZZ-Aa3"/>
                             <constraint firstAttribute="width" constant="50" id="XbY-YT-dqv"/>
+                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="50" id="pbb-tj-Cbh"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="タップして動画で確認" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kkH-Kd-e8C">
-                        <rect key="frame" x="38" y="146" width="555" height="40"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="タップして動画で確認→" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kkH-Kd-e8C">
+                        <rect key="frame" x="38" y="146" width="188" height="40"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="40" id="3mI-SB-Fu6"/>
                         </constraints>
@@ -51,7 +56,7 @@
                 <constraints>
                     <constraint firstItem="nxJ-rM-7wO" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="18" id="1zy-Ko-7B8"/>
                     <constraint firstItem="zU8-1b-YEc" firstAttribute="top" secondItem="nxJ-rM-7wO" secondAttribute="bottom" constant="20" id="59m-Na-Q4p"/>
-                    <constraint firstItem="xpU-ZN-paK" firstAttribute="leading" secondItem="zU8-1b-YEc" secondAttribute="trailing" constant="150" id="9pj-ed-8vG"/>
+                    <constraint firstItem="xpU-ZN-paK" firstAttribute="leading" secondItem="zU8-1b-YEc" secondAttribute="trailing" constant="30" id="9pj-ed-8vG"/>
                     <constraint firstAttribute="trailingMargin" secondItem="kkH-Kd-e8C" secondAttribute="trailing" constant="10" id="AOj-7c-jlN"/>
                     <constraint firstItem="kkH-Kd-e8C" firstAttribute="leading" secondItem="nxJ-rM-7wO" secondAttribute="leading" id="Jms-5y-8aS"/>
                     <constraint firstItem="zU8-1b-YEc" firstAttribute="leading" secondItem="nxJ-rM-7wO" secondAttribute="leading" id="Ngf-gN-HM2"/>
@@ -60,7 +65,7 @@
                     <constraint firstItem="kkH-Kd-e8C" firstAttribute="top" secondItem="zU8-1b-YEc" secondAttribute="bottom" constant="10" id="a2c-2o-pRg"/>
                     <constraint firstItem="xpU-ZN-paK" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="10" id="j7Y-fC-5ar"/>
                     <constraint firstItem="nxJ-rM-7wO" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="10" id="qTQ-o7-d4H"/>
-                    <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="xpU-ZN-paK" secondAttribute="trailing" constant="10" id="wPu-MZ-b5K"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="xpU-ZN-paK" secondAttribute="trailing" constant="10" id="wPu-MZ-b5K"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
